# GR-ML-infra

./: .gitignore  CLAUDE.md  Dockerfile  PROJECT_CLEANUP_SUMMARY.md  README.md  TECHNICAL_SUMMARY.md  api_client_demo.py  api_server.py  main.py  main_optimized.py  requirements-dev.txt  requirements.txt  run_demo.py  run_optimization_demo.py  start_api_server.sh  test_mtgr_vllm_integration.py  test_report.json
.github/workflows/: ci.yml
bench/: perf_input.json  run_triton_perf.sh
docs/: ARCHITECTURE.md  DEVELOPMENT.md  MTGR_VLLM_INTEGRATION.md  PERFORMANCE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  TRITON_INTEGRATION_STATUS.md  dependencies.md  final_project_summary.md  inference_optimization_summary.md  model_architecture.md  model_comparison.md  project_runtime_guide.md  project_summary.md  quickstart.md  usage_example.md  user_behavior_extension.md
examples/: client_example.py
integrations/: framework_controller.py  kv_cache_converter.py
integrations/hstu/: enhanced_onnx_exporter.py  feature_processor.py  hstu_model.py  model_parameter_calculator.py  onnx_exporter.py  user_behavior_schema.py
integrations/tensorrt/: build_engine.py  tensorrt_engine.py
integrations/tensorrt/plugins/: CMakeLists.txt  README.md
integrations/tensorrt/plugins/cpp/: fused_attention_layernorm_kernel.cu  fused_attention_layernorm_plugin.cpp  hierarchical_sequence_fusion_kernel.cu  hierarchical_sequence_fusion_plugin.cpp  hstu_hierarchical_attention_kernel.cu  hstu_hierarchical_attention_plugin.cpp  interaction_triton_fast_kernel.cu  interaction_triton_fast_plugin.cpp  plugin_registry.cpp  sequence_recommendation_interaction_kernel.cu  sequence_recommendation_interaction_plugin.cpp  tensorrt_plugin_base.cpp
integrations/tensorrt/plugins/include/: fused_attention_layernorm_plugin.h  hierarchical_sequence_fusion_plugin.h  hstu_hierarchical_attention_plugin.h  interaction_triton_fast_plugin.h  sequence_recommendation_interaction_plugin.h  tensorrt_plugin_base.h
integrations/tensorrt/plugins/python/: tensorrt_plugins.py
integrations/vllm/: vllm_engine.py
kernels/cutlass_prototype/: cutlass_stub.cpp
kernels/triton_ops/: autotune_interaction.py  interaction_triton_fast.py  interaction_wrapper.py
kernels/trt_plugin_skeleton/: CMakeLists.txt  README.md  simple_plugin.cpp
optimizations/cache/: intelligent_cache.py
optimizations/cutlass_ops/: cutlass_interaction.py
optimizations/triton_ops/: fused_attention_layernorm.py  hierarchical_sequence_fusion.py  hstu_hierarchical_attention.py  interaction_triton_fast.py  interaction_wrapper.py  sequence_recommendation_interaction.py  trriton_operator_manager.py
scripts/: install_dependencies.sh  quickstart.sh  run_server.sh
src/: build_engine.py  embedding_service.py  export_mtgr_onnx.py  export_onnx.py  inference_pipeline.py  model_parameter_calculator.py  mtgr_integration.py  mtgr_model.py  optimized_inference_pipeline.py  quick_test_mtgr.py  tensorrt_inference.py  vllm_engine.py
tests/: test_feature_processing.py  test_integration.py  test_interaction.py  test_prefill_decode.py  test_tensorrt_plugins.py  test_triton_integration.py  test_user_behavior.py
triton_model_repo/embedding_service/: config.pbtxt
triton_model_repo/embedding_service/1/: model.py
triton_model_repo/ensemble_model/: config.pbtxt
triton_model_repo/gr_trt/: config.pbtxt
triton_model_repo/interaction_python/: config.pbtxt
triton_model_repo/interaction_python/1/: model.py
triton_model_repo/preprocess_py/: config.pbtxt
triton_model_repo/preprocess_py/1/: model.py
